gts-macros/tests/compile_fail/base_parent_mismatch.stderr
error: struct_to_gts_schema: Base structs must have either an ID field (one of: $id, id, gts_id, or gtsId) of type GtsInstanceId OR a GTS Type field (one of: type, gts_type, gtsType, or schema) of type GtsSchemaId
  --> tests/compile_fail/base_parent_mismatch.rs:15:12
   |
15 | pub struct BaseEventV1<P> {
   |            ^^^^^^^^^^^

error[E0425]: cannot find type `BaseEventV1` in this scope
  --> tests/compile_fail/base_parent_mismatch.rs:25:12
   |
25 |     base = BaseEventV1,
   |            ^^^^^^^^^^^ not found in this scope
